<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.SurveyFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/quiz"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/questions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/questions"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical">

            <TextView
                style="@style/questionsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1" />

            <RadioGroup
                android:id="@+id/question1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/answer_1_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_to_1_1" />

                <RadioButton
                    android:id="@+id/answer_1_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_to_1_2" />

                <RadioButton
                    android:id="@+id/answer_1_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_to_1_3" />

                <RadioButton
                    android:id="@+id/answer_1_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_to_1_4" />
            </RadioGroup>

            <TextView
                style="@style/questionsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2" />

            <RadioGroup
                android:id="@+id/question2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/answer_2_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_to_2_1" />

                <RadioButton
                    android:id="@+id/answer_2_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_to_2_2" />

                <RadioButton
                    android:id="@+id/answer_2_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_to_2_3" />

                <RadioButton
                    android:id="@+id/answer_2_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_to_2_4" />
            </RadioGroup>

            <TextView
                style="@style/questionsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3" />

            <RadioGroup
                android:id="@+id/question3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/answer_3_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_to_3_1" />

                <RadioButton
                    android:id="@+id/answer_3_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_to_3_2" />

                <RadioButton
                    android:id="@+id/answer_3_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_to_3_3" />

                <RadioButton
                    android:id="@+id/answer_3_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_to_3_4" />
            </RadioGroup>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/button_quiz_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/questions" />

</androidx.constraintlayout.widget.ConstraintLayout>